--- a/gm/fronts/index.html
+++ b/gm/fronts/index.html
@@ -292,9 +292,9 @@
 <p class="NoIndent">
 	寫下一些簡短的語句來提醒自己這個危害是關於什麼，概括說明這個危害的內容。先不要煩惱事情會怎麼發展或會發生什麼事──「惡兆」和「臨頭大難」會為你處理這一切；我們很快就會再提到它們。此外，倘若這個危害中涉及了多個人物（比如說獸人軍閥和牠的氏族戰士、可憎的邪神和祂的僕從），那麼現在就為他們取名，並為他們添加一到兩個細節。保留一些空白給自己，讓你能在之後的遊戲過程中再為其添加內容。</p>
 
-<h3 class="ExtraLayer">自訂動作 (Custom Moves)</h3>
+<h3 class="ExtraLayer">自訂動作</h3>
 <p class="NoIndent">
-	有時候你會需要一個未被任何既有動作所涵蓋的動作來處理危害的內容。在這種時候，你編寫一個自訂動作，來填補其中的空缺、或為這個危害添加合適的效果影響。根據你的需求而定，這些自訂動作可以被當作玩家動作、也可以是GM動作。當然，如果你打算編寫新的玩家動作，不要讓你的手碰到骰子，並牢牢記住玩家動作的基本架構：擲出10+時為完全成功，而擲出7-9時則為部份成功。而當擲出失敗時，互許這個自訂動作會帶來某些特定的效果、或也許不會──也許你僅僅是因此得到一個進行動作的機會、或讓某個預先設定的惡兆得以實現。這些動作的格式將依據動作的不同而各有不同。</p>
+	有時候你會需要一個未被任何既有動作所涵蓋的動作來處理危害的內容。在這種時候，你編寫一個自訂動作，來填補其中的空缺、或為這個危害添加合適的效果影響。根據你的需求而定，這些自訂動作可以被當作玩家動作、也可以是GM動作。當然，如果你打算編寫新的玩家動作，不要讓你的手碰到骰子，並牢牢記住玩家動作的基本架構：擲出10+時為完全成功，而擲出7-9時則為部份成功。而當擲出失敗時，互許這個自訂動作會帶來某些特定的效果、或也許不會──也許你僅僅是因此得到一個進行動作的機會、或讓某個惡兆得以實現。這些動作的型式將依據動作的不同而各有不同。</p>
 <p class="Example">
 	對「白淨聖門的開啟」這個前置而言，我知道某幾個愚蠢的玩家角色一定會嘗試踏進從聖門中溢散而出的光芒中，因此我編寫了一個動作，用以表示這可能會導致的情況。</p>
 <p class="Example">
@@ -304,42 +304,56 @@
 	✴擲出失敗時，汝被置於審判天秤，虧欠將被顯明。</p>
 
 <h3 class="ExtraLayer">惡兆 (Grim Portents)</h3>
-<p class="NoIndent">Grim portents are dark designs for what could happen if a danger goes unchecked. Think about what would happen if the danger existed in the world but the PCs didn’t—if all these awful things you’ve conjured up had their run of the world. Scary, huh? The grim portents are your way to codify the plans and machinations of your dangers. A grim portent can be a single interesting event or a chain of steps. When you’re not sure what to do next, push your danger towards resolving a grim portent.</p>
-<p>More often than not grim portents have a logical order. The orcs tear down the city only after the peace talks fail, for example. A simple front will progress from bad to worse to much worse in a clear path forward. Sometimes, grim portents are unconnected pathways to the impending doom. The early manifestations of danger might not all be related. It’s up to you to decide how complex your front will be. Whenever a danger comes to pass, check the other dangers in the front. In a complex front, you may need to cross off or alter the grim portents. That’s fine, you’re allowed. Keep scale in mind, too. Grim portents don’t all have to be world-shaking. They can simply represent a change in direction for a danger. Some new way for it to cause trouble in the world.</p>
-<p>Think of your grim portents as possible moves waiting in the wings. When the time is right, unleash them on the world.</p>
-<p class="Example">I’ve chosen a few grim portents for my new front.</p>
-<ul><li class="Exampleli">The College sends an expedition to the Gate</li>
-<li class="Exampleli">The Key is discovered</li>
-<li class="Exampleli">The First Trumpet sounds</li>
-<li class="Exampleli">A Champion is chosen</li>
-<li class="Exampleli">The Second Trumpet sounds</li>
-<li class="Exampleli">The Herald appears</li>
-<li class="Exampleli">The Gate is Opened</li></ul>
-<p class="NoIndent">When a grim portent comes to pass, check it off—the prophecy has come true! A grim portent that has come to pass might have ramifications for your other fronts, too. Have a quick look when your players aren’t demanding your attention and feel free to make changes. One small grim portent may resound across the whole campaign in subtle ways.</p>
-<p>You can advance a grim portent descriptively or prescriptively. Descriptively means that you’ve seen the change happen during play, so you mark it off. Maybe the players sided with the goblin tribes against their lizardman enemies—now the goblins control the tunnels. Lo and behold, this was the next step in a grim portent. Prescriptive is when, due to a failed player move or a golden opportunity, you advance the grim portent as your hard move. That step comes to pass, show its effects and keep on asking, “What do you do, now?”</p>
+<p class="NoIndent">
+	惡兆是你所規劃的黑暗設計，描繪著當危害不受控制時可能導致的事件。試想一下，若危害存在於世，但玩家角色們卻沒有阻止的話，事情將會怎麼發展──若你想像出的這一切惡事都降臨在這個世界上又會如何。很可怕，是吧？惡兆正是你用來系統性地編纂你危害中那些計畫和陰謀詭計的手段。惡兆可以是單一的有趣事件、也可以是一連串的步驟。當你不確定接下來該做什麼事時，試著把你的危害推進，讓惡兆降臨。</p>
+<p>
+	通常來說，危害中的惡兆往往會有著合理的發生順序。舉例來說，獸人部落會在和平談判破局之後才入侵並摧毀城鎮。性質單純的前置會以一個清楚明白的軌跡緩緩推進，讓情況從有點不妙發展成糟糕的困境、然後再進一步演變成更糟糕的災厄。有時候，這些惡兆也可能分成了路線不同，但仍通往最終臨頭大難的途徑，在這種情況下，危害早期的徵兆表現可能並不會有什麼關聯性。由你自己決定你的前置會有多複雜。每當危害發生時，檢查該前置中的其他危害，在處理比較複雜的前置時，你可能會需要刪減或修改惡兆的內容。這沒關係，你確實被允許這麼做。除此之外，也要記得留意事件的規模：惡兆並不全都是驚天動地的大事件，它們可以只是簡單地代表著危害發展方向的變化，暗示著另一種它為這個世界帶來麻煩災難的方式。</p>
+<p>
+	把你的惡兆想成是一種等待著被你使用的可能動作。當時機來臨時，把它們釋放到這個世界上吧。</p>
+<div class="Example">我已經為我的這個新前置選好了幾個惡兆：</p>
+<ul style="margin-bottom: 0;">
+	<li class="Exampleli">學院派遣了一團考察隊前往聖門</li>
+	<li class="Exampleli">鑰匙被發現</li>
+	<li class="Exampleli">第一次的號角聲奏響</li>
+	<li class="Exampleli">勇者被揀選</li>
+	<li class="Exampleli">第二次的號角聲奏響</li>
+	<li class="Exampleli">預兆出現</li>
+	<li class="Exampleli">聖門被開啟</li></ul></div>
+<p class="NoIndent">
+	當惡兆發生時，把它從清單上劃掉──預言已經成真！一個已經發生的惡兆可能也會對你的其他前置帶來交錯影響。當你的玩家們不需要你的全神注意時，快速地瀏覽一下這些前置，並在需要時放手進行修改它們。就算只是個小小的惡兆，也能夠在不知不覺中對整個戰役故事產生深遠的迴響。</p>
+<p>
+	你可以透過敘事性或規則性的方式來推進你的惡兆。敘事性的方式意味著你在遊戲過程中便自然而然地看見了變化，並因此將它劃掉。也許玩家們決定站在哥布林部落這邊，共同對抗牠們的蜥蜴人仇敵──現在哥布林們控制了隧道。看啊，這就是個惡兆。至於規則性的推進方式，則是當玩家們在動作中失敗、或當絕佳的黃金時機來臨時，你可以將之做為你的硬動作來使惡兆發生。讓事件發生，展示它帶來的影響，並不斷詢問：「現在，你們打算做什麼？」</p>
 
 <h3 class="ExtraLayer">臨頭大難 (Impending Doom)</h3>
 <p class="NoIndent">
-	每個危害最終都通往一個臨頭大難。
-At the end of every danger’s path is an impending doom. This is the final toll of the bell that signals the danger’s triumphant resolution. When a grim portent comes to pass the impending doom grows stronger, more apparent and present in the world. These are the very bad things that every danger, in some way, seeks to bring into effect. Choose one of the types of impending dooms and give it a concrete form in your front. These often change in play, as the characters meddle in the affairs of the world. Don’t fret, you can change them later.</p>
-<ul><li>Tyranny (of the strong over the weak or the few over the many)</li>
-<li>Pestilence (the spread of sickness and disease, the end of wellness)</li>
-<li>Destruction (apocalypse, ruin and woe)</li>
-<li>Usurpation (the chain of order comes apart, someone rightful is displaced)</li>
-<li>Impoverishment (enslavement, the abandonment of goodness and right)</li>
-<li>Rampant Chaos (laws of reality, of society, or any order is dissolved)</li></ul>
-<p>When all of the grim portents of a danger come to pass, the impending doom sets in. The danger is then resolved but the setting has changed in some meaningful way. This will almost certainly change the front at large as well. Making sure that these effects reverberate throughout the world is a big part of making them feel real.</p>
+	每個危害最終都通往一個臨頭大難。它是最後敲響的警鐘，表示著危害的勝利。每當惡兆發生時，臨頭大難就會變得更強大、更明顯，並降臨在這個世界上。它們是每個危害在某種程度上都試圖實現的惡劣壞事。為臨頭大難選擇一個類型，並賦予它一個在你前置中的具體型式。隨著角色們干預這個世界上的事物，這些設定經常會在遊戲過程中發生變化。別擔心，你永遠可以日後再調整它們。</p>
+<ul>
+	<li>暴政 (強者凌駕於弱者、或少數凌駕於多數)</li>
+	<li>瘟疫 (疾病與瘟疫的散播、健康的終結)</li>
+	<li>毀滅 (末日、崩毀、和災難)</li>
+	<li>奪取 (秩序的鏈條被打破、某人合法的地位被取代)</li>
+	<li>貧困 (奴役、放棄良善與權利)</li>
+	<li>猖獗混沌 (現實、社會、或任何秩序的規律被瓦解)</li></ul>
+
+<p>
+	當危害中的所有惡兆都發生時，臨頭大難也就此降臨。這個危害將因此被解決，而這個世界也將以一種有意義的方式產生變化，這也通常會大幅度改變你的前置內容。確保這些影響在整個世界中迴盪作用，是賦予這個世界真實感的重要因素之一。</p>
 
 <h3 class="ExtraLayer">懸念 (Stakes)</h3>
-<p class="NoIndent">Your stakes questions are 1-3 questions about people, places, or groups that you’re interested in. People include PCs and NPCs, your choice. Remember that your agenda includes “Play to find out what happens?” Stakes are a way of reminding yourself what you want to find out.</p>
-<p>Stakes are concrete and clear. Don’t write stakes about vague feelings or incremental changes. Stakes are about important changes that affect the PCs and the world. A good stakes question is one that, when it’s resolved, means that things will never be the same again.</p>
-<p>The most important thing about stakes is that you find them interesting. Your stakes should be things that you genuinely want to know, but that you’re also willing to leave to be resolved through play. Once you’ve written it as a stake, it’s out of your hands, you don’t get to just make it up anymore. Now you have to play to find out.</p>
-<p>Playing to find out is one of the biggest rewards of playing Dungeon World. You’ve written down something tied to events happening in the world that you want to find out about—now you get to do just that.</p>
-<p>Once you have your stakes your front is ready to play.</p>
-<div class="Example"><p>My stakes questions include, as tailored to my group:</p>
-<ul style="margin-bottom: 0;"><li class="Exampleli">Who will be the champion?</li>
-<li class="Exampleli">How will Lux respond to the Light From Beyond?</li>
-<li class="Exampleli">Will the College be able to recruit Avon?</li></ul></div>
+<p class="NoIndent">
+	你的懸念會是1-3個關於你感興趣的人物、場所、或團體的問題。這裡所指的人物包括了玩家角色和NPC，由你決定。記得你要達成的目標事項包含了「用玩的來看看會發生什麼事」嗎？懸念正是一種用於提醒自己你想要看看會發生什麼事情的手段。</p>
+<p>
+	懸念中的問題必須要具體而清晰。不要寫下那種與模糊感受或漸進變化有關的懸念。懸念的提問聚焦在那些會影響玩家角色和整個世界的重大變化上。怎樣才算是一個好的懸念呢？那就是當這個問題被解決之後，事情將再也不復以往。</p>
+<p>
+	關於懸念最重要的就是你必須真心對它們感興趣。你的懸念要是那些你亟欲知道的事情，而你也願意把它們留到遊戲過程中才解決。一旦你把它們做為懸念寫下，它們就脫離了你的掌握，你也不能再隨意編寫它們的答案。現在開始，你必須用玩的來看看會生什麼事。</p>
+<p>
+	「用玩的來看看會生什麼事」是你在遊玩地城世界的過程中所能收獲的最大回報。你已經寫下了一些與這個世界上正在發生的事件有關，且你想要進一步瞭解的問題──現在去找出問題的答案吧！</p>
+<p>
+	當你決定好你的懸念之後，你的前置就大功告成，可以開始遊戲了。</p>
+<div class="Example"><p>我為我的玩家團隊量身打造了以下懸念：</p>
+<ul style="margin-bottom: 0;">
+	<li class="Exampleli">誰會被揀選成為勇者？</li>
+	<li class="Exampleli">拉克絲會如何回應那來自彼端的真光？</li>
+	<li class="Exampleli">學院是否有辦法招募亞文加入他們？</li></ul></div>
 
 <hr/>
 <h2>Resolving a Front</h2>
