--- a/gm/fronts/index.html
+++ b/gm/fronts/index.html
@@ -181,7 +181,7 @@
 <p>
 	當你為你添加到前置中的危害取好名稱後，你需要從以下列表中為這些危害分別挑選其所屬的類型。或者你也可以反過來使用這個列表來激發你創造危害的靈感想法：把前置的概念放在心中，仔細閱讀整個列表，並從中挑選一到二個合適的危害。</p>
 <p class="Example">
-	對於我們前置中的三個危害（祕法奧術學院、白淨聖門、和白銀熾天使），我們分別選擇它們的類型為 密謀團夥、黑暗傳送門、和 天使聖樂隊。</p>
+	對於我們前置中的三個危害（祕法奧術學院、白淨聖門、和白銀熾天使），我們分別選擇它們的類型為 祕密結社、黑暗傳送門、和 天使聖樂隊。</p>
 
 <hr/>
 <h2 class="ExtraLayer">危害的類型</h2>
@@ -196,10 +196,10 @@
 <ul>
 	<li>誤入歧途的良善 (<em><b>動力</b>: 不計代價做出「正確」的事</em>)</li>
 	<li>盜賊公會 (<em><b>動力</b>: 透過詭計奪取</em>)</li>
-	<li>邪教 (<em><b>動力</b>: 從內部寄生</em>)</li>
+	<li>邪教 (<em><b>動力</b>: 蠱惑內心</em>)</li>
 	<li>宗教組織 (<em><b>動力</b>: 建立並遵循教義</em>)</li>
 	<li>腐敗政府 (<em><b>動力</b>: 維持現狀</em>)</li>
-	<li>密謀團夥 (<em><b>動力</b>: 吸收握有權力者，成長茁壯</em>)</li></ul>
+	<li>祕密結社 (<em><b>動力</b>: 吸收握有權力者，發展勢力</em>)</li></ul>
 
 <h4 style="margin-left: 30px;">野心黨眾 的 GM動作：</h4>
 <ul style="margin-left: 30px;">
@@ -210,7 +210,7 @@
 	<li>建立一條新的規則 (在組織內部)</li>
 	<li>主張領土或資源的所有權</li>
 	<li>協商達成交易</li>
-	<li>仔細審慎觀察一名潛在的敵人</li></ul>
+	<li>審慎觀察一名潛在的敵人</li></ul>
 
 <h3>異界勢力</h3>
 <ul>
@@ -227,7 +227,7 @@
 	<li>對敵人降下詛咒</li>
 	<li>利用恩惠祝福換取一個承諾</li>
 	<li>透過媒介間接地進行攻擊</li>
-	<li>罕見的，當群星正位時，直接地進行攻擊</li>
+	<li>罕見的，當群星正位時，直接進行攻擊</li>
 	<li>促進與其他類似力量的競爭</li>
 	<li>讓某人知道真相，無論其意願如何</li></ul>
 
@@ -235,7 +235,7 @@
 <ul>
 	<li>不死者之王 (<em><b>動力</b>: 追尋真正的永生</em>)</li>
 	<li>瘋求力量的巫師 (<em><b>動力</b>: 追尋魔法力量</em>)</li>
-	<li>智能遺物 (<em><b>動力</b>: 找到配得上自己的持有者</em>)</li>
+	<li>智能神器 (<em><b>動力</b>: 找到配得上自己的持有者</em>)</li>
 	<li>遠古詛咒 (<em><b>動力</b>: 使其無法脫身</em>)</li>
 	<li>天選者 (<em><b>動力</b>: 去達成或憎恨他們的天命</em>)</li>
 	<li>龍 (<em><b>動力</b>: 囤積黃金珠寶，守護龍巢</em>)</li></ul>
@@ -268,7 +268,7 @@
 	<li>毫不猶豫或遲疑地宣戰，並依照宣言行事</li></ul>
 
 <h3>詛咒之地</h3>
-<ul><li>被遺棄的高塔 (<em><b>動力</b>: 吸引意志薄弱者</em>)</li>
+<ul><li>廢棄的高塔 (<em><b>動力</b>: 吸引意志薄弱者</em>)</li>
 <li>不淨之地 (<em><b>動力</b>: 孳生邪惡</em>)</li>
 <li>元素渦流 (<em><b>動力</b>: 茁壯，撕開現實</em>)</li>
 <li>黑暗傳送門 (<em><b>動力</b>: 吞吐出大量惡魔</em>)</li>
@@ -298,7 +298,7 @@
 <p class="Example">
 	對「白淨聖門的開啟」這個前置而言，我知道某幾個愚蠢的玩家角色一定會嘗試踏進從聖門中溢散而出的光芒中，因此我編寫了一個動作，用以表示這可能會導致的情況。</p>
 <p class="Example">
-	當你<strong>站立在自彼端溢散的光芒之中</strong>時，擲+睿知：<br/>
+	當你<strong>站立在自彼端散發而出的光芒中</strong>時，擲+睿知：<br/>
 	✴擲出10+時，你被判為有價值之人，白銀熾天使將賜予你一個未來預景或祝福。<br/>
 	✴擲出7-9時，你遭受懷疑，並看見關於漆黑命運的預景，只要你不改正行為，它就可能降臨在你身上。<br/>
 	✴擲出失敗時，汝被置於審判天秤，虧欠將被顯明。</p>
@@ -314,10 +314,10 @@
 <ul style="margin-bottom: 0;">
 	<li class="Exampleli">學院派遣了一團考察隊前往聖門</li>
 	<li class="Exampleli">鑰匙被發現</li>
-	<li class="Exampleli">第一次的號角聲奏響</li>
+	<li class="Exampleli">第一次號角聲奏響</li>
 	<li class="Exampleli">勇者被揀選</li>
-	<li class="Exampleli">第二次的號角聲奏響</li>
-	<li class="Exampleli">預兆出現</li>
+	<li class="Exampleli">第二次號角聲奏響</li>
+	<li class="Exampleli">傳訊使者出現</li>
 	<li class="Exampleli">聖門被開啟</li></ul></div>
 <p class="NoIndent">
 	當惡兆發生時，把它從清單上劃掉──預言已經成真！一個已經發生的惡兆可能也會對你的其他前置帶來交錯影響。當你的玩家們不需要你的全神注意時，快速地瀏覽一下這些前置，並在需要時放手進行修改它們。就算只是個小小的惡兆，也能夠在不知不覺中對整個戰役故事產生深遠的迴響。</p>
@@ -352,62 +352,83 @@
 <div class="Example"><p>我為我的玩家團隊量身打造了以下懸念：</p>
 <ul style="margin-bottom: 0;">
 	<li class="Exampleli">誰會被揀選成為勇者？</li>
-	<li class="Exampleli">拉克絲會如何回應那來自彼端的真光？</li>
-	<li class="Exampleli">學院是否有辦法招募亞文加入他們？</li></ul></div>
+	<li class="Exampleli">拉克絲會如何回應那來自彼端的聖潔真光？</li>
+	<li class="Exampleli">學院是否有辦法招募亞文加入他們的行列？</li></ul></div>
 
 <hr/>
-<h2>Resolving a Front</h2>
-<p class="NoIndent">Often a front will be resolved in a simple and straightforward manner. A front representing a single dungeon may have its dangers killed, turned to good, or overcome by some act of heroism. In this case the front is dissolved and set aside. Maybe there are elements of the front—dangers that go unresolved or leftover members of a danger that’s been cleared—that live on. Maybe they move to the campaign front as brand new dangers?</p>
-<p>The campaign front will need a bit more effort to resolve. It’ll be working slowly and subtly as the course of the campaign rolls along. You won’t introduce or resolve it all at once, but in pieces. The characters work towards defeating the various minions of the big bad that lives in your campaign front. In the end, though, you’ll know that the campaign front is resolved when the Dark God is confronted or the undead plague claims the world and the heroes emerge bloodied but victorious or defeated and despairing. Campaign fronts take longer to deal with but in the end they’re the most satisfying to resolve.</p>
-<p>When a front is resolved take some extra time to sit down and look at the aftermath. Did any grim portents come to pass? Even if a danger is stopped, if any grim portents are fulfilled, the world is changed, if only in subtle ways. Keep this in mind when you write your future fronts. Is there anyone who could be moved from the now-defeated front to somewhere else? Anyone get promoted or reduced in stature? The resolution of a front is an important event!</p>
-<p>When you resolve an adventure front usually that means the adventure itself has been resolved. This is a great time to take a break and look at your campaign front. Let it inspire your next adventure front. Write up a new adventure front or polish off one you’ve been working on, draw a few maps to go with it and get ready for the next big thing.</p>
+<h2>解決前置</h2>
+<p class="NoIndent">
+	通常來說，冒險前置往往會以一種簡單明瞭的方式被解決掉。當一個代表著地城的前置被解決時，可能意味著該前置中的危害被殺死、改邪歸正、或被某種英勇行動所克服。在這種情況下，前置將被解決並擱置在一旁。然而，也許這個前置中仍留有其他要素？──比如說那些尚未被解決的威脅、或是已經被消除的危害遺留下來的殘黨。也許，他們會進到戰役前置中，以嶄新危害的身分重新出現也說不定？</p>
+<p>
+	至於戰役前置，則需要付出更多心力才能加以解決。隨著戰役的發展推進，它將緩慢而巧妙地對故事情節發揮影響。你不會一下子就把它整個導入故事之中或一口氣解決掉，而是分成好幾個部分進行。那些致力於擊敗你戰役前置中大反派的角色們將一次次與大反派的部下鬥爭對抗，而在最後，當黑暗之神降臨、當亡靈瘟疫席捲了整個世界、當浴血奮戰的英雄們宣告了最終的勝利、或在絕望中被擊潰時，你就會知道這個戰役前置已經被解決，就此告一段落。戰役前置會需要花上更多的時間來處理，但當它們在最後被解決時，也會帶來更大的滿足感。</p>
+<p>
+	當某個前置被解決時，額外撥點時間坐下來思考，看看它所引發的後果：是否有任何惡兆已經發生？即使危害被成功阻止，但若已經有任何的惡兆應驗，那麼世界就會產生改變──只不過會以更細微的形式發生。往後，當你需要編寫新的前置時，把這些變化謹記在心。有沒有哪個人物能從這個被克服的前置中被挪到其他地方？又是否有任何人的地位會因此提升或跌落？記住，解決前置本身就是一個相當重要的事件！</p>
+<p>
+	當你解決某個冒險前置時，通常代表著這場冒險也就此告一段落。這將是個休息的大好時機，花點時間看看你的戰役前置，讓它激發你關於下一個冒險前置的靈感。編寫新的冒險前置、或是完善一個你一直在琢磨的前置想法，為它們畫出幾張地圖，並為下一個大事件做好準備。</p>
 
 <hr/>
-<h2>Multiple Adventure Fronts</h2>
-<p class="NoIndent">As you start your campaign you’re likely to have a lightly detailed campaign front and one or two detailed adventure fronts. Characters may choose, part-way through an adventure, to pursue some other course. You might end up with a handful of partly-resolved adventure fronts. Not only is this okay, it’s a great way to explore a world that feels alive and organic. Always remember, fronts continue along apace no matter whether the characters are there to see them or not. Think offscreen, especially where fronts are concerned.</p>
-<p>When running two adventure fronts at the same time they can be intertwined or independent. The anarchists corrupting the city from the inside are a different front from the orcs massing outside the walls, but they’d both be in play at once. On the other hand one dungeon could have multiple fronts at play within its walls: the powers and effects of the cursed place itself and the warring humanoid tribes that inhabit it.</p>
-<p>A situation warrants multiple adventure fronts when there are multiple impending dooms, all equally potent but not necessarily related. The impending doom of the anarchists is chaos in the city, the impending doom of the orcs is its utter ruination. They are two separate fronts with their own dangers. They’ll deal with each other, as well, so there’s some room for the players choosing sides or attempting to turn the dangers of one front against the other.</p>
-<p>When dealing with multiple adventure fronts the players are likely to prioritize. The cult needs attention now, the orcs can wait, or vice versa. These decisions lead to the slow advancement of the neglected front, eventually causing more problems for the characters and leading to new adventures. This can get complex once you’ve got three or four fronts in play. Take care not to get overwhelmed.</p>
+<h2>複數個冒險前置</h2>
+<p class="NoIndent">
+	當你開始進行你的戰役故事時，你可能會有一個稍微詳細的戰役前置，以及一到二個更詳細許多的冒險前置。在冒險過程中，玩家角色們可能會選擇去追求其他目標，而你最終也可能會因此得到許多僅解決了一部份內容的冒險前置。這不但是件好事，更是探索這個充滿活力與生機的世界的好方法。永遠記得，無論角色們有沒有看見它們，前置中所記載的危害都將持續發展推進。記得思考幕後發生的事，特別是那些前置所關注的部分。</p>
+<p>
+	當你同時運行二個冒險前置時，你可以決定讓它們會彼此交互影響、或讓它們各自獨立。舉例來說，從內部侵蝕城鎮秩序的無政府主義教團、以及聚集在城牆外的獸人大軍就分別屬於不同的前置，但他們都將同時參與到故事之中。另一方面，同一座地城內也可能會有多個前置在同時發揮作用：比如說詛咒之地本身的力量和影響、以及棲居於此，但互相敵對的類人生物部落等等。</p>
+<p>
+	什麼樣的情境值得你安排複數個冒險前置呢？那就是當這個情境可能隱含著好幾個不同的臨頭大難：它們全都同樣具有影響力、但並不一定彼此相關。舉例來說，無政府主義教團所引發的臨頭大難會是城鎮中的混亂，而獸人軍隊所導致的臨頭大難則會讓城鎮被徹底毀滅。它們分別是不同的前置，且都有著各自的危害。當然，它們也可能會彼此影響，因此在這個情境下，玩家們將得到一些選擇的餘地，讓他們能夠去決定要站在哪一邊、或嘗試引導某個前置的危害去對付另一個危害。</p>
+<p>
+	當需要同時對付多個冒險前置時，玩家們可能會為它們的標上不同得優先度。也許他們認為教團現在就需要被關注，而獸人們的威脅可以留待之後再處理，或者反過來。這些決定將會導致那些被忽視的前置危害開始緩緩地發展推進，最終為角色們帶來更多的麻煩，並演變成另一場嶄新的冒險。要注意的是，如果你同時在遊戲中放入三或四個以上的前置，情況就可能變得太過複雜。小心不要讓自己手忙腳亂。</p>
 
 <hr/>
 <h1>範例前置: 白淨聖門的開啟</h1>
-<h2>Dangers</h2>
-<h3>The College of Arcanists (Cabal)</h3>
-<p class="NoIndent"><strong>Impulse:</strong> to absorb those in power, to grow</p>
-<h4>Grim Portents</h4>
-<ul><li>The College sends an expedition to the Gate</li>
-<li>The Key is discovered</li>
-<li>The Gate’s Power is harnessed</li>
-<li>The College seizes control</li></ul>
-<p class="NoIndent"><strong>Impending Doom:</strong> Usurpation</p>
-<h3>The White Gate (Dark Portal)</h3>
-<p class="NoIndent"><strong>Impulse:</strong> to disgorge demons</p>
-<h4>Grim Portents</h4>
-<ul><li>The First Trumpet sounds</li>
-<li>The Second Trumpet sounds</li>
-<li>The Gate is opened</li></ul>
-<p class="NoIndent"><strong>Impending Doom:</strong> Destruction</p>
-<h3>The Argent Seraphim (Choir of Angels)</h3>
-<p class="NoIndent"><strong>Impulse:</strong> to pass judgement</p>
-<h4>Grim Portents</h4>
-<ul><li>A Champion is chosen</li>
-<li>An organization of power is formed or co-opted</li>
-<li>The Herald appears</li>
-<li>Judgement is passed</li></ul>
-<p class="NoIndent"><strong>Impending Doom:</strong> Tyranny</p>
-<h2>Description and Cast</h2>
-<p class="NoIndent">An ancient gate, buried for aeons in the icy north. It opens into a realm of pure light, guarded by the Argent Seraphim. It was crafted only to be opened at Judgement Day, so that the Seraphim could come forth and purge the realm of men. It was recently uncovered by the College of Arcanists, who do not yet understand its terrible power.</p>
-<ul><li>Oren Balserus, Arcanist Supreme</li>
-<li>Hali’el, voice of the Seraphim</li>
-<li>Drudge, a manservant</li></ul>
-<h2>Custom Moves</h2>
-<p class="NoIndent">When you <strong>stand in the presence of the Light From Beyond</strong>, roll+WIS. ✴On a 10+ you are judged worthy, the Argent Seraphim will grant you a vision or boon. ✴On a 7-9 you are under suspicion and see a vision of what dark fate might befall you if you do not correct your ways. ✴On a miss, thou art weighed in the balance and art found wanting.</p>
-<h2>Stakes</h2>
-<ul><li>Who will be the Champion?</li>
-<li>How will Lux respond to the holy light?</li>
-<li>Will the College be able to recruit Avon?</li></ul>
+<h3>危害</h3>
+<div class="Move"><h4 style="margin-top: 0;">祕法奧術學院 (祕密結社)</h4>
+<p class="NoIndent"><strong>動力:</strong> 吸收握有權力者，成長茁壯</p>
+<p class="NoIndent"><strong>惡兆:</strong></p>
+<ul>
+	<li>學院派遣了一團考察隊前往聖門</li>
+	<li>鑰匙被發現</li>
+	<li>聖門的力量被利用</li>
+	<li>學院取得控制</li></ul>
+<p class="NoIndent"><strong>臨頭大難:</strong> 奪取</p></div>
 
+<div class="Move"><h4 style="margin-top: 0;">白淨聖門 (黑暗傳送門)</h4>
+<p class="NoIndent"><strong>動力:</strong> 吞吐出大量惡魔</p>
+<p class="NoIndent"><strong>惡兆:</strong></p>
+<ul>
+	<li>第一次號角聲奏響</li>
+	<li>第二次號角聲奏響</li>
+	<li>聖門被開啟</li></ul>
+<p class="NoIndent"><strong>臨頭大難:</strong> 毀滅</p></div>
 
+<div class="Move"><h4 style="margin-top: 0;">白銀熾天使 (天使聖樂隊)</h4>
+<p class="NoIndent"><strong>動力:</strong> 宣布審判</p>
+<p class="NoIndent"><strong>惡兆:</strong></p>
+<ul>
+	<li>勇者被揀選</li>
+	<li>權力組織被成立或集結</li>
+	<li>傳訊使者出現</li>
+	<li>審判降臨</li></ul>
+<p class="NoIndent"><strong>臨頭大難:</strong> 暴政</p></div>
+
+<h3>描述與登場人物</h3>
+<p class="NoIndent">
+	一扇古老神秘的異界之門，被掩埋在冰天雪地的北境。這扇門通往一個由白銀熾天使所守護的真光國度。它被打造成只會在審判日時開啟，讓熾天使得以從中湧現，並淨化整個文明。最近，祕法奧術學院發現了它的存在，但他們還不瞭解這扇異界之門隱藏的可怕力量。</p>
+<p class="NoIndent" style="margin-bottom: .5em;"><strong>登場人物:</strong></p>
+<ul>
+	<li>厄倫．巴塞路斯, 首席秘法師</li>
+	<li>哈利爾, 熾天使之聲</li>
+	<li>德魯奇, 一名男僕</li></ul>
+
+<h3>自訂動作</h3>
+<div class="Move"><p class="NoIndent">當你<strong>站立在自彼端散發而出的光芒中</strong>時，擲+睿知：<br/>
+	✴擲出10+時，你被判為有價值之人，白銀熾天使將賜予你一個未來預景或祝福。<br/>
+	✴擲出7-9時，你遭受懷疑，並看見關於漆黑命運的預景，只要你不改正行為，它就可能降臨在你身上。<br/>
+	✴擲出失敗時，汝被置於審判天秤，虧欠將被顯明。</p></div>
+
+<h3>懸念</h3>
+<ul>
+	<li>誰會被揀選成為勇者？</li>
+	<li>拉克絲會如何回應那來自彼端的聖潔真光？</li>
+	<li>學院是否有辦法招募亞文加入他們的行列？</li></ul>
 
           </div>
        </div>
