--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
 <h2 id="license">授權</h2>
 
 <p>本站採用<a href="http://creativecommons.org/licenses/by/3.0/">創用 CC 3.0 Unported 授權條款</a>與<strong>開放遊戲授權（Open Gaming License）</strong>。請參閱<a href="license/">授權頁</a>以瞭解更多細節。</p>
+
+<h2 id="license">翻譯</h2>
+本站係由 <a href="https://buzzfirefox.wixsite.com/freeandopentrpg">免費開源TRPG中文化團隊</a> 翻譯架設。<br>
+翻譯者：Hazmole, 阿腎, Eska, 洪偉, 盧靜, 藍刺蝟, 貓街的艾薇, 鬱鬱, Tak Pui Lo
           </div>
        </div>
     </div>
